DefaultDataWriterFactory cleanups
Change-Id: I7a156c033dd64a466baa09b954db25599b0d8433